Update icon shapes

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         </div>
       </section>
     </main>
+    <footer class="footer-spacer" aria-hidden="true"></footer>
   </div>
 
   <div class="overlay loading" id="loading" hidden>
